objects/LLC_BI__Covenant_Rule__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Covenant__c</fullName>
        <description>This field is required and is automatically populated. It identifies the covenant associated with the Covenant Rule record and is automatically populated when creating a new Covenant Rule.</description>
        <label>Covenant Mgmt</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Covenant Rules</relationshipLabel>
        <relationshipName>Covenant_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is required. It is manually poulated. It stores the last day this rule will be used.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Indicator_Value__c</fullName>
        <description>This field is required. It is manually populated. It stores the required required value for Financial Covenants (for example, DSC must have a minimum 1.5 coverage) that must be met for a financial covenant compliance record to pass.</description>
        <label>Financial Indicator Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Operator__c</fullName>
        <description>This field is required and is manually populated. It stores whether a value in Spreads should be greater than or less than the LLC_BI__Financial_Indicator_Value__c to pass.</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Covenant Rule</label>
    <nameField>
        <displayFormat>COVRULE-{0000}</displayFormat>
        <label>Covenant Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covenant Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>